Kubernetes/SimpleAPI/mysql.yml
---
#MySQL StatefulSet

apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql-statefulset
  namespace: database
  labels:
    database: mysql

spec:
  replicas: 1
  selector:
    matchLabels:
      database: mysql

  template:
    metadata:
      labels:
        database: mysql

    spec:
      containers:
        - name: mysql-simpleapi
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: mysql-storage

      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi



---
#MySQL service

apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: database

spec:
  selector:
    database: mysql

  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
