Kubernetes/SimpleAPI/simpleapi.yml
---
#Deployment for simpleapi

apiVersion: apps/v1
kind: Deployment

metadata:
  name: simpleapi-app
  labels:
    app: simpleapi
  namespace: application

spec:
  selector:
    matchLabels:
      app: simpleapi

  replicas: 1

  template:
    metadata:
      labels:
        app: simpleapi

    spec:
      containers:
        - name: simpleapi
          imagePullPolicy: Never
          image: simpleapi
          ports:
            - containerPort: 8787
---
#Service for simpleapi

apiVersion: v1
kind: Service

metadata:
  name: simpleapi-service
  namespace: application

spec:
  type: NodePort
  selector:
      app: simpleapi

  ports:
    - protocol: TCP
      port: 1067
      targetPort: 8787
      nodePort: 30003

---
#Ingress for simpleapi

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: simpleapi-ingress
  namespace: application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: simpleapi.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simpleapi-service
                port:
                  number: 1067
